# consolegfx

./: README.md  pyproject.toml
consolegfx/: __init__.py  canvas.py  engine.py  entity.py  render.py  tiles.py
consolegfx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: test.py
